[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/d_daok_cosas_strip10.png" type="Texture" id=1]
[ext_resource path="res://sprites/d_daok_piezas_strip13.png" type="Texture" id=2]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=3]
[ext_resource path="res://sprites/d_particula_humo.png" type="Texture" id=4]
[ext_resource path="res://scenes/otros/Actividad.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/otros/Puerta.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/d_daok_objetos_strip13.png" type="Texture" id=7]
[ext_resource path="res://scripts/Trabajo.gd" type="Script" id=8]
[ext_resource path="res://sounds/a_trabajo.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/a_poner.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 86.5, 52 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.2, 0.8, 1 )
colors = PoolColorArray( 1, 1, 1, 0.156863, 1, 1, 1, 0.784314, 1, 1, 1, 0.784314, 1, 1, 1, 0.0784314 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 3 )
width = 512

[sub_resource type="Curve" id=5]
bake_resolution = 20
_data = [ Vector2( 0, 0.288636 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
width = 512
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.2
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 17.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 0.25
angle = 360.0
angle_random = 1.0
scale = 2.4
scale_random = 0.2
scale_curve = SubResource( 9 )
color_ramp = SubResource( 8 )

[sub_resource type="Animation" id=10]
resource_name = "Go"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Horno:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1.2, 1.1 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Horno:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Trabajo" type="Node2D" groups=["diamantino", "ediTrabajo", "ediffice", "porton", "robable"]]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
position = Vector2( 2.5, 5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Fondo" type="Sprite" parent="Imagen"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Caja1" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 41, -52 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Caja2" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 7, -48 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Caja3" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 41, -68 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Caja4" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 6, -64 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Caja5" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 41, -84 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Caja6" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 3, -81 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Horno" type="Sprite" parent="Imagen"]
position = Vector2( -34, -36 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -57, -116 )
hframes = 13
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Humo" type="Particles2D" parent="Imagen/Horno"]
position = Vector2( -10, -96 )
emitting = false
amount = 10
lifetime = 10.0
visibility_rect = Rect2( -100, -220, 200, 250 )
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Salon" type="Node2D" parent="Imagen"]
__meta__ = {
"_edit_lock_": true
}

[node name="Sala1" type="Node2D" parent="Imagen/Salon"]
position = Vector2( -47, -19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sala2" type="Node2D" parent="Imagen/Salon"]
position = Vector2( 55, 36 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sala" type="YSort" parent="Imagen/Salon" groups=["interior"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Mineral1" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -64, 25 )
rotation = 1.15366
texture = ExtResource( 7 )
centered = false
offset = Vector2( -63, -112 )
hframes = 13
frame = 7
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Mineral2" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 1.99999, 75 )
rotation = -0.87441
texture = ExtResource( 7 )
centered = false
offset = Vector2( -63, -112 )
hframes = 13
frame = 7
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Mineral3" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -59, 86 )
rotation = -0.109956
texture = ExtResource( 7 )
centered = false
offset = Vector2( -63, -112 )
hframes = 13
frame = 7
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Engranaje" type="Sprite" parent="Imagen"]
position = Vector2( -45, 14 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -58, -114 )
hframes = 13
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Actividad" parent="Imagen" instance=ExtResource( 5 )]

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin2" type="Node2D" parent="Fin"]
position = Vector2( -19, -29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin3" type="Node2D" parent="Fin"]
position = Vector2( -54, -36 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin4" type="Node2D" parent="Fin"]
position = Vector2( -71, -13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin5" type="Node2D" parent="Fin"]
position = Vector2( -71, 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin6" type="Node2D" parent="Fin"]
position = Vector2( -51, 46 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin7" type="Node2D" parent="Fin"]
position = Vector2( -15, 51 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin8" type="Node2D" parent="Fin"]
position = Vector2( 19, 53 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin9" type="Node2D" parent="Fin"]
position = Vector2( 52, 47 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin10" type="Node2D" parent="Fin"]
position = Vector2( 73, 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin11" type="Node2D" parent="Fin"]
position = Vector2( 77, -14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin12" type="Node2D" parent="Fin"]
position = Vector2( 56, -39 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin13" type="Node2D" parent="Fin"]
position = Vector2( 18, -35 )
__meta__ = {
"_edit_lock_": true
}

[node name="Puerta" parent="." instance=ExtResource( 6 )]
position = Vector2( 31, 64 )

[node name="Horario" type="Timer" parent="."]
one_shot = true

[node name="Distribuye" type="Timer" parent="."]
one_shot = true

[node name="SacaAsalariado" type="Timer" parent="."]
one_shot = true

[node name="Anima" type="AnimationPlayer" parent="."]
anims/Go = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Sonido" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 9 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SPoner" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 10 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="toggled" from="Imagen/Actividad" to="." method="_on_Actividad_toggled"]
[connection signal="timeout" from="Horario" to="." method="_on_Horario_timeout"]
[connection signal="timeout" from="Distribuye" to="." method="_on_Distribuye_timeout"]
[connection signal="timeout" from="SacaAsalariado" to="." method="_on_SacaAsalariado_timeout"]
